--- a/package.json
+++ b/package.json
@@ -30,5 +30,6 @@
     "typescript": "^5.9.3",
     "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^3.2.4"
-  }
+  },
+  "packageManager": "pnpm@10.28.2"
 }
